Remove non-existent field from ProjectUpdateSerializer. Update API docs
