# estela-web/src/services/api/generated-api/models/Spider.ts
@@ -44,7 +44,7 @@ export interface Spider {
      */
     dataStatus?: SpiderDataStatusEnum;
     /**
-     * Days before data expires.
+     * Days before data is deleted.
      * @type {number}
      * @memberof Spider
      */
